[REMOVE] fix unknown classes in nib exception on loading user statistics

--- a/SubEthaEdit-Mac/German.lproj/UserStatistics.xib
+++ b/SubEthaEdit-Mac/German.lproj/UserStatistics.xib
@@ -31,14 +31,14 @@
                 <rect key="frame" x="0.0" y="0.0" width="262" height="436"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <scrollView horizontalLineScroll="66" horizontalPageScroll="0.0" verticalLineScroll="66" verticalPageScroll="0.0" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" id="7" customClass="BGHUDScrollView">
+                    <scrollView horizontalLineScroll="66" horizontalPageScroll="0.0" verticalLineScroll="66" verticalPageScroll="0.0" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" id="7">
                         <rect key="frame" x="7" y="186" width="248" height="162"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <clipView key="contentView" id="G93-We-Vcd">
                             <rect key="frame" x="1" y="1" width="246" height="160"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
-                                <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnReordering="NO" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" rowHeight="64" id="8" customClass="BGHUDTableView">
+                                <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnReordering="NO" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" rowHeight="64" id="8">
                                     <rect key="frame" x="0.0" y="0.0" width="246" height="160"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <size key="intercellSpacing" width="3" height="2"/>
