--- a/SubEthaEdit-Mac/German.lproj/MainMenu.xib
+++ b/SubEthaEdit-Mac/German.lproj/MainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5053" systemVersion="13D21" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1090" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5053"/>
@@ -863,7 +863,7 @@
                         <items>
                             <menuItem title="Suchen…" tag="1" keyEquivalent="f" id="269">
                                 <connections>
-                                    <action selector="performFindPanelAction:" target="463" id="601"/>
+                                    <action selector="showFindAndReplaceInterface:" target="-1" id="R3M-8d-wLE"/>
                                 </connections>
                             </menuItem>
                             <menuItem title="Alle suchen" tag="1001" keyEquivalent="f" id="266">
@@ -882,18 +882,18 @@
                                     <action selector="performFindPanelAction:" target="463" id="598"/>
                                 </connections>
                             </menuItem>
-                            <menuItem title="Ersetzen und Suchen" tag="6" keyEquivalent="g" id="519">
+                            <menuItem title="Ersetzen und Weitersuchen" tag="6" keyEquivalent="g" id="519">
                                 <modifierMask key="keyEquivalentModifierMask" control="YES" command="YES"/>
                                 <connections>
                                     <action selector="performFindPanelAction:" target="463" id="595"/>
                                 </connections>
                             </menuItem>
-                            <menuItem title="Auswahl suchen" tag="7" keyEquivalent="e" id="270">
+                            <menuItem title="Auswahl als Suchbegriff" tag="7" keyEquivalent="e" id="270">
                                 <connections>
                                     <action selector="performFindPanelAction:" target="463" id="599"/>
                                 </connections>
                             </menuItem>
-                            <menuItem title="Mit Auswahl ersetzen" tag="1002" keyEquivalent="e" id="517">
+                            <menuItem title="Auswahl als Ersetzungsbegriff" tag="1002" keyEquivalent="e" id="517">
                                 <modifierMask key="keyEquivalentModifierMask" option="YES" command="YES"/>
                                 <connections>
                                     <action selector="performFindPanelAction:" target="463" id="600"/>
@@ -1218,15 +1218,15 @@ DQ
                         <rect key="frame" x="0.0" y="0.0" width="387" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <clipView key="contentView" id="FRN-eC-kYD">
-                            <rect key="frame" x="0.0" y="0.0" width="387" height="480"/>
+                            <rect key="frame" x="0.0" y="0.0" width="372" height="480"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <textView editable="NO" selectable="NO" importsGraphics="NO" richText="NO" baseWritingDirection="leftToRight" usesRuler="YES" usesFontPanel="YES" verticallyResizable="YES" quoteSubstitution="YES" dashSubstitution="YES" textReplacement="YES" spellingCorrection="YES" smartInsertDelete="YES" id="590">
-                                    <rect key="frame" x="0.0" y="0.0" width="387" height="1159"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="372" height="1159"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <size key="minSize" width="387" height="480"/>
+                                    <size key="minSize" width="372" height="480"/>
                                     <size key="maxSize" width="417" height="10000000"/>
                                     <attributedString key="textStorage">
                                         <fragment>
@@ -2049,7 +2049,7 @@ Cg
                                         </fragment>
                                     </attributedString>
                                     <color key="insertionPointColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                                    <size key="minSize" width="387" height="480"/>
+                                    <size key="minSize" width="372" height="480"/>
                                     <size key="maxSize" width="417" height="10000000"/>
                                 </textView>
                             </subviews>
